// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Form > renders correctly with node children 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: contents;
}

<div
    data-testid="testing"
  >
    <form
      class="emotion-0 emotion-1"
      novalidate=""
    >
      Test
    </form>
  </div>
</DocumentFragment>
`;

exports[`Form > renders correctly with onSubmit 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: contents;
}

<div
    data-testid="testing"
  >
    <form
      class="emotion-0 emotion-1"
      novalidate=""
    >
      <button
        type="submit"
      >
        Submit
      </button>
    </form>
  </div>
</DocumentFragment>
`;
